fixed : some alignment for different device screen size

--- a/assets/css/desktop/_mq.sass
+++ b/assets/css/desktop/_mq.sass
@@ -45,14 +45,14 @@
     .box
       margin: 0px auto
 
-  .contact-wrapper
-    transform: translateY(0)
-    .contact-container
-      .contact-info
-        transform: translateX(-3rem)
-
-  .form-wrapper
-    display: block
+  .contact
+    .contact-wrapper
+      transform: translateY(0)
+      .contact-container
+        .contact-info
+          transform: translateX(-3rem)
+    .form-wrapper
+      display: block
 
   .lightbox
     .container-fluid
