--- a/assets/css/mobile/_about.sass
+++ b/assets/css/mobile/_about.sass
@@ -1,4 +1,5 @@
 .about
+  transform: translateY(-1rem)
   .fa-quote-left
     left: 0
   .fa-quote-right
@@ -14,5 +15,5 @@
     border-radius: 1rem
     color: $white
     padding: .5em 2em
-    margin: 4em 0 2em
+    margin: 3em 0 2em
     letter-spacing: .2em
