--- a/assets/css/mobile/_gallery.sass
+++ b/assets/css/mobile/_gallery.sass
@@ -23,19 +23,19 @@
         size: cover
         position: center
     &.box-5
-      background: url('../images/four.jpg') no-repeat
+      background: url('../images/five.jpg') no-repeat
         size: cover
         position: center
     &.box-6
-      background: url('../images/four.jpg') no-repeat
+      background: url('../images/six.jpg') no-repeat
         size: cover
         position: center
     &.box-7
-      background: url('../images/four.jpg') no-repeat
+      background: url('../images/seven.jpg') no-repeat
         size: cover
         position: center
     &.box-8
-      background: url('../images/four.jpg') no-repeat
+      background: url('../images/eight.jpg') no-repeat
         size: cover
         position: center
     &:hover
