--- a/assets/css/mobile/_home.sass
+++ b/assets/css/mobile/_home.sass
@@ -29,24 +29,20 @@
     flex-grow: 1
 
 .header
-  padding: 2.5rem 1rem
-  .hamburger-icon
-    +size(1.8rem, .25rem)
-    background: $white
-    border-radius: 15px
+  padding: 2rem .5rem 0
+  .hamburger-wrapper
     position: relative
     z-index: 200
-    cursor: pointer
-    &::after, &::before
-      content: ''
-      position: absolute
-      +size(1.8rem, .2rem)
+    .hamburger-icon
+      +size(2.5rem, .3rem)
       background: $white
-      border-radius: 15px
-    &::after
-      margin: .6rem 0 0 .55rem
-    &::before
-      margin: -.6rem 0 0 .55rem
+      border-radius: 1rem;
+      cursor: pointer
+      box-shadow: 0 0 .5rem transparentize($dark, .3)
+      &:nth-child(2)
+        margin: .5rem 0 .5rem -.5rem
+      &:nth-child(3)
+        // margin: -.6rem 0 0 .55rem
 
 .hamburger-menu
   position: absolute
